# Q_Robot_Project

./: README.md
q_robot_description/: CMakeLists.txt  package.xml
q_robot_description/launch/: q_robot.launch
q_robot_description/urdf/: base.xacro  casters.xacro  q_robot.gazebo  q_robot.xacro  sensors.xacro  wheels.xacro
q_robot_gazebo/: CMakeLists.txt  package.xml
q_robot_gazebo/launch/: q_robot_world.launch
q_robot_gazebo/world/: qrobot.world
q_robot_navigation/: CMakeLists.txt  package.xml
q_robot_navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml
q_robot_navigation/launch/: amcl.launch  gamapping.launch  move_base.launch  navigation.launch
q_robot_navigation/maps/: robot_map.pgm
q_robot_navigation/rviz/: localization.rviz  q_robot.rviz
