<package format="2">
  <name>q_robot_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for q_robot_description.
    This package contains configuration data, 3D models, and launch files for the q_robot_description robot.
  </description>
  <maintainer email="otb@email.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Run dependencies -->
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- Export -->
  <export>
    <architecture_independent />
  </export>
</package>
